# WeatherStationMonitor

./: .gitignore  CMakeLists.txt  PythonBridge.md  README.md  main.moc
docs/sprints/: sprint1.md
include/: DatabaseManager.h  MainWindow.h  PythonBridge.h  WeatherFetcher.h
python/: processor.py
resources/config/: api_config.json
resources/config/examples/: weather_response.json
src/: DatabaseManager.cpp  MainWindow.cpp  PythonBridge.cpp  WeatherFetcher.cpp  main.cpp
ui/: MainWindow.ui
